# vcpkg_chii

./: .clang-format  LICENSE  README.md  bootstrap.ps1  bootstrap.sh
cmake/: vcpkg_chii.cmake  vcpkg_chii_auto_toolchain_file.cmake  vcpkg_chii_auto_triplet.cmake  vcpkg_chii_enable.cmake  vcpkg_chii_find_package.cmake
example/: CMakeLists.txt  my_norm.cxx  my_test.cxx
